--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "missartisan-bot",
+  "name": "discord-1337-bot",
   "version": "0.0.1",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "eris": "^0.7.2"
+    "eris": "^0.8.5"
   },
   "engines": {
     "node": "8.x"
